# eduops

./: .coderabbit.yaml  .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md
.github/: .gitignore  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/PULL_REQUEST_TEMPLATE/: feature.md   release.md
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml  commitlint.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh  create-new-feature.sh
.specify/scripts/powershell/: common.ps1  create-new-feature.ps1
backend/: README.md  pyproject.toml
backend/src/eduops/: __main__.py  app.py  cli.py  config.py  db.py
backend/src/eduops/api/: __init__.py  health.py  scenarios.py
backend/src/eduops/models/: scenario.py  session.py
backend/src/eduops/services/: catalogue.py  docker_exec.py
backend/tests/: conftest.py  test_catalogue_service.py  test_db_helpers.py  test_scenarios_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActiveSession.tsx  SearchBar.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: notify.ts
frontend/src/pages/: Home.tsx  ScenarioCatalogue.tsx  ScenarioWorkspace.tsx  Session.tsx
frontend/src/services/: api.ts  sse.ts
frontend/src/types/: index.ts
specs/001-core-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+6 files in other folders)
