[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eduops"
version = "0.1.0"
description = "eduops Core Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "docker",
    "sentence-transformers[onnx]",
    "openai",
    "httpx",
    "sse-starlette",
    "tomli",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[project.scripts]
eduops = "eduops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eduops"]
